Implemented add, delete freight charges

--- a/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
+++ b/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
@@ -9,9 +9,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="pull-left page-title">Add Freight Charges</h4>
-                        <ol class="breadcrumb pull-right">
-                            <li> <a href="manage-freight-charges.html"><i class="fa fa-angle-double-left"></i>
-                                    Back</a></li>
+                        <ol class="breadcrumb pull-right pointer" (click)="goBack()">
+                            <li> <a><i class="fa fa-angle-double-left" ></i> Back</a></li>
                         </ol>
                     </div>
                 </div>
@@ -30,9 +29,6 @@
                                         </div>
                                         <div class="different_address">
                                             <hr class="custom-hr">
-
-
-
                                             <div class="input-section-check">
                                                 <div class="row">
                                                     <div class="col-md-6 col-lg-4">
@@ -59,18 +55,18 @@
                                             <label>Pickup From</label>
                                             <div class="checkBox">
 
-                                                <ul>
+                                                <ul (change)="pickUpfrom($event)">
                                                     <li>
-                                                        <input type="radio" id="radio1" name="radios" value="all"
-                                                            checked="">
+                                                        <input type="radio" id="radio1" name="radios" value="PLANT"
+                                                            >
                                                         <label for="radio1">PLANT</label>
                                                     </li>
                                                     <li>
-                                                        <input type="radio" id="radio2" name="radios" value="all">
+                                                        <input type="radio" id="radio2" name="radios" value="DEPOT">
                                                         <label for="radio2">DEPOT</label>
                                                     </li>
                                                     <li>
-                                                        <input type="radio" id="radio3" name="radios" value="all">
+                                                        <input type="radio" id="radio3" name="radios" value="PORT">
                                                         <label for="radio3">PORT</label>
                                                     </li>
                                                 </ul>
@@ -80,30 +76,32 @@
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             <label for="category">Location</label>
-                                            <select class="form-control rm06" name="status">
-                                                <option>Kolkata</option>
+                                            <select (change)="selectedState($event)" class="form-control rm06" name="status">
+                                                <option value="">Select state..</option>
+                                                <option *ngFor="let state of states" value="{{state?.name}}">{{state?.name}}</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             <label for="category">Freight Charges</label>
-                                            <input type="text" placeholder="Category Name" id=""
-                                                class="form-control" value="40,000">
+                                            <input type="text" placeholder="0" [(ngModel)]="freightCharge" id="" class="form-control"
+                                                value="">
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="form-group">
                                             <label for="search">Status</label>
-                                            <select class="form-control rm06" name="status">
-                                                <option value="A">Active</option>
-                                                <option value="I">Inactive</option>
+                                            <select (change)="selectStatus($event)" class="form-control rm06" name="status">
+                                                <option value="" checked>Select...</option>
+                                                <option value="1">Active</option>
+                                                <option value="2">Inactive</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-sm-12">
                                         <div class="">
-                                            <button class="btn btn-primary btn-ser" type="submit">Save</button>
+                                            <button class="btn btn-primary btn-ser" (click)="saveFreight()" type="button">Save</button>
                                         </div>
                                     </div>
                                 </div>
@@ -129,30 +127,17 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr>
-                                                    <td>Plant</td>
-                                                    <td>Kolkata</td>
-                                                    <td>40,000</td>
-                                                    <td><span
+                                                <tr *ngFor="let freight of freightCharges">
+                                                    <td>{{freight?.pickup_from}}</td>
+                                                    <td>{{freight?.location}}</td>
+                                                    <td>{{freight?.freight_charges}}</td>
+                                                    <!-- <td>
+                                                        <span class="badge badge-sm bgc-green-d1 text-white pb-1 px-25">Active</span>
+                                                    </td> -->
+                                                    <td *ngIf="freight?.status == 1"><span
                                                             class="badge badge-sm bgc-green-d1 text-white pb-1 px-25">Active</span>
                                                     </td>
-                                                    <td>
-                                                        <a href="#"
-                                                            class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
-                                                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                                                        </a>
-                                                        <a href="#"
-                                                            class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
-                                                            <i class="fa fa-trash" aria-hidden="true"></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Plant</td>
-                                                    <td>Kolkata</td>
-                                                    <td>40,000</td>
-                                                    <td>
-                                                        <span
+                                                    <td *ngIf="freight?.status == 2"><span
                                                             class="badge badge-sm bgc-red-d1 text-white pb-1 px-25">Inactive</span>
                                                     </td>
                                                     <td>
@@ -160,12 +145,13 @@
                                                             class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                                             <i class="fa fa-pencil" aria-hidden="true"></i>
                                                         </a>
-                                                        <a href="#"
+                                                        <a (click)="deleteFreight(freight?.id)"
                                                             class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                                             <i class="fa fa-trash" aria-hidden="true"></i>
                                                         </a>
                                                     </td>
                                                 </tr>
+
                                             </tbody>
                                         </table>
                                     </div>
