--- a/src/app/product-management/add-category/add-category.component.html
+++ b/src/app/product-management/add-category/add-category.component.html
@@ -10,7 +10,7 @@
                 <div class="col-sm-12">
                    <h4 class="pull-left page-title">Add Category</h4>
                    <ol class="breadcrumb pull-right">
-                      <li> <a href="category-management.html"><i class="fa fa-angle-double-left"></i> Back</a></li>
+                      <li> <a><i class="fa fa-angle-double-left"></i> Back</a></li>
                    </ol>
                 </div>
              </div>
