--- a/src/app/product-management/category/category.component.html
+++ b/src/app/product-management/category/category.component.html
@@ -62,10 +62,10 @@
                                            </td>
                                            <td><span class="badge badge-sm bgc-green-d1 text-white pb-1 px-25">....</span></td>
                                            <td>
-                                              <a href="#" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
+                                              <a class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                                 <i class="fa fa-pencil" aria-hidden="true"></i>
                                               </a>
-                                              <a href="#" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
+                                              <a class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                                 <i class="fa fa-trash" aria-hidden="true"></i>
                                               </a>
                                            </td>
