--- a/src/app/product-management/add-sub-category/add-sub-category.component.html
+++ b/src/app/product-management/add-sub-category/add-sub-category.component.html
@@ -9,8 +9,8 @@
              <div class="row">
                 <div class="col-sm-12">
                    <h4 class="pull-left page-title">Add Sub Category</h4>
-                   <ol class="breadcrumb pull-right">
-                      <li> <a href="sub-category-management.html"><i class="fa fa-angle-double-left"></i> Back</a></li>
+                   <ol class="breadcrumb pull-right pointer">
+                      <li (click)="goBack()"> <a><i class="fa fa-angle-double-left"></i> Back</a></li>
                    </ol>
                 </div>
              </div>
