--- a/src/app/settings/set-threshold-limits/set-threshold-limits.component.html
+++ b/src/app/settings/set-threshold-limits/set-threshold-limits.component.html
@@ -9,8 +9,8 @@
              <div class="row">
                 <div class="col-sm-12">
                    <h4 class="pull-left page-title">Threshold Limits</h4>
-                   <ol class="breadcrumb pull-right">
-                      <li> <a href="set-threshold-limits-add.html"><i class="far fa-plus-square"></i> Set Threshold Limits</a></li>
+                   <ol class="breadcrumb pull-right tabclass" routerLink="/set-threshold">
+                      <li> <a><i class="far fa-plus-square"></i> Set Threshold Limits</a></li>
                    </ol>
                 </div>
              </div>
@@ -71,7 +71,7 @@
                                         <td>9</td>
                                         <td>0.00</td>
                                         <td>
-                                           <a href="set-threshold-limits-add.html" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
+                                           <a  class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                             <i class="fa fa-pencil" aria-hidden="true"></i>
                                            </a>
                                            <a href="#" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
@@ -90,7 +90,7 @@
                                         <td>9</td>
                                         <td>0.00</td>
                                         <td>
-                                           <a href="set-threshold-limits-add.html" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
+                                           <a  class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
                                             <i class="fa fa-pencil" aria-hidden="true"></i>
                                            </a>
                                            <a href="#" class="mx-2px btn radius-1 border-2 btn-xs btn-brc-tp btn-light-secondary btn-h-lighter-success btn-a-lighter-success">
