fg stock implemented

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -35,6 +35,13 @@
                              </span>
                              </a>
                           </li>
+                          <li class="nav-item">
+                           <a routerLink="/fg-stock" class="nav-link">
+                           <span class="nav-text">
+                           <span>FG Atock Assumption</span>
+                           </span>
+                           </a>
+                        </li>
                        </ul>
                     </div>
                     <b class="sub-arrow"></b>
